--- a/htp-collector/package.json
+++ b/htp-collector/package.json
@@ -17,5 +17,11 @@
     "eslint-plugin-import": "~2.22.1",
     "eslint-plugin-prettier": "~3.1.4",
     "prettier": "~2.1.2"
+  },
+  "scripts": {
+    "simulate": "node pbx_simulator.js"
+  },
+  "dependencies": {
+    "date-and-time": "^0.14.1"
   }
 }
