--- a/hpt-backend/package.json
+++ b/hpt-backend/package.json
@@ -1,20 +1,32 @@
 {
   "name": "hpt-backend",
   "version": "0.0.1",
+  "private": true,
   "description": "HiPathTariffication backend server",
   "repository": "https://github.com/DzenDyn/hpt-collector.git",
   "contributors": [
     "Evgeny Nikiforov <dzendyn@gmail.com> (https://github.com/DzenDyn/)",
     "Valery Grunenko <smb.sochi@gmail.com> (https://github.com/spectrejs/)"
   ],
-  "main": "server.js",
+  "keywords": [],
   "license": "MIT",
+  "main": "app.js",
+  "dependencies": {
+    "express": "~4.12.3",
+    "swagger-express-mw": "~0.7.0"
+  },
   "devDependencies": {
+    "should": "~7.1.0",
+    "supertest": "~1.0.0",
     "eslint": "~7.12.1",
     "eslint-config-airbnb-base": "~14.2.0",
     "eslint-config-prettier": "~6.15.0",
     "eslint-plugin-import": "~2.22.1",
     "eslint-plugin-prettier": "~3.1.4",
     "prettier": "~2.1.2"
+  },
+  "scripts": {
+    "start": "node app.js",
+    "test": "swagger project test"
   }
 }
