--- a/hpt-backend/package.json
+++ b/hpt-backend/package.json
@@ -12,12 +12,9 @@
   "license": "MIT",
   "main": "app.js",
   "dependencies": {
-    "express": "~4.12.3",
-    "swagger-express-mw": "~0.7.0"
+    "express": "~4.12.3"
   },
   "devDependencies": {
-    "should": "~7.1.0",
-    "supertest": "~1.0.0",
     "eslint": "~7.12.1",
     "eslint-config-airbnb-base": "~14.2.0",
     "eslint-config-prettier": "~6.15.0",
