--- a/hpt-backend/package.json
+++ b/hpt-backend/package.json
@@ -12,7 +12,9 @@
   "license": "MIT",
   "main": "app.js",
   "dependencies": {
-    "express": "~4.12.3"
+    "body-parser": "~1.19.0",
+    "express": "~4.12.3",
+    "mongoose": "~5.10.13"
   },
   "devDependencies": {
     "eslint": "~7.12.1",
@@ -23,7 +25,6 @@
     "prettier": "~2.1.2"
   },
   "scripts": {
-    "start": "node app.js",
-    "test": "swagger project test"
+    "start": "nodemon app.js"
   }
 }
