--- a/hpt-backend/package.json
+++ b/hpt-backend/package.json
@@ -1,30 +1,38 @@
 {
   "name": "hpt-backend",
   "version": "0.0.1",
-  "private": true,
   "description": "HiPathTariffication backend server",
   "repository": "https://github.com/DzenDyn/hpt-collector.git",
   "contributors": [
     "Evgeny Nikiforov <dzendyn@gmail.com> (https://github.com/DzenDyn/)",
     "Valery Grunenko <smb.sochi@gmail.com> (https://github.com/spectrejs/)"
   ],
-  "keywords": [],
+  "main": "src/app.ts",
   "license": "MIT",
-  "main": "app.js",
   "dependencies": {
-    "body-parser": "~1.19.0",
-    "express": "~4.12.3",
-    "mongoose": "~5.10.13"
+    "@types/express": "^4.17.9",
+    "@types/node": "~14.14.7",
+    "@types/swagger-ui-express": "^4.1.2",
+    "@types/validator": "^13.1.0",
+    "@types/yamljs": "^0.2.31",
+    "body-parser": "^1.19.0",
+    "connect": "^3.7.0",
+    "express": "^4.17.1",
+    "swagger-routes-express": "^3.2.1",
+    "swagger-ui-express": "^4.1.4",
+    "typescript": "~4.0.5",
+    "validator": "^13.1.17",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "eslint": "~7.12.1",
-    "eslint-config-airbnb-base": "~14.2.0",
-    "eslint-config-prettier": "~6.15.0",
-    "eslint-plugin-import": "~2.22.1",
-    "eslint-plugin-prettier": "~3.1.4",
-    "prettier": "~2.1.2"
+    "@typescript-eslint/eslint-plugin": "~4.7.0",
+    "@typescript-eslint/parser": "~4.7.0",
+    "eslint": "~7.13.0",
+    "ts-node": "~9.0.0"
   },
   "scripts": {
-    "start": "nodemon app.js"
+    "build": "tsc",
+    "start": "node ./bin/app.js",
+    "dev": "ts-node ./src/app.ts"
   }
 }
