--- a/hpt-backend/package.json
+++ b/hpt-backend/package.json
@@ -35,11 +35,16 @@
     "eslint-plugin-prettier": "~3.1.4",
     "prettier": "~2.1.2",
     "eslint": "~7.12.1",
+    "nodemon": "~2.0.6",
+    "npm-run-all": "~4.1.5",
+    "rimraf": "~3.0.2",
     "ts-node": "~9.0.0"
   },
   "scripts": {
-    "build": "tsc",
+    "clean": "rimraf bin",
+    "tsc": "tsc",
+    "build": "npm-run-all clean tsc",
     "start": "node ./bin/app.js",
-    "dev": "ts-node ./src/app.ts"
+    "dev": "nodemon --watch 'src/**/*.ts' --exec ts-node ./src/app.ts"
   }
 }
