--- a/hpt-backend/package.json
+++ b/hpt-backend/package.json
@@ -45,6 +45,6 @@
     "tsc": "tsc",
     "build": "npm-run-all clean tsc",
     "start": "node ./bin/app.js",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec ts-node ./src/app.ts"
+    "dev": "nodemon"
   }
 }
