--- a/hpt-backend/package.json
+++ b/hpt-backend/package.json
@@ -18,6 +18,7 @@
     "@types/yamljs": "~0.2.31",
     "body-parser": "~1.19.0",
     "connect": "~3.7.0",
+    "dotenv": "~8.2.0",
     "express": "~4.17.1",
     "mongoose": "~5.10.15",
     "swagger-routes-express": "~3.2.1",
@@ -29,14 +30,14 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "~4.7.0",
     "@typescript-eslint/parser": "~4.7.0",
+    "eslint": "~7.12.1",
     "eslint-config-airbnb-base": "~14.2.0",
     "eslint-config-prettier": "~6.15.0",
     "eslint-plugin-import": "~2.22.1",
     "eslint-plugin-prettier": "~3.1.4",
-    "prettier": "~2.1.2",
-    "eslint": "~7.12.1",
     "nodemon": "~2.0.6",
     "npm-run-all": "~4.1.5",
+    "prettier": "~2.1.2",
     "rimraf": "~3.0.2",
     "ts-node": "~9.0.0"
   },
