--- a/hpt-backend/package.json
+++ b/hpt-backend/package.json
@@ -14,16 +14,19 @@
     "@types/mongoose": "~5.10.1",
     "@types/node": "~14.14.7",
     "@types/swagger-ui-express": "~4.1.2",
+    "@types/uuid": "~8.3.0",
     "@types/validator": "~13.1.0",
     "@types/yamljs": "~0.2.31",
     "body-parser": "~1.19.0",
     "connect": "~3.7.0",
     "dotenv": "~8.2.0",
     "express": "~4.17.1",
+    "express-openapi-validator": "~4.7.1",
     "mongoose": "~5.10.15",
     "swagger-routes-express": "~3.2.1",
     "swagger-ui-express": "~4.1.4",
     "typescript": "~4.0.5",
+    "uuid": "~8.3.1",
     "validator": "~13.1.17",
     "yamljs": "~0.3.0"
   },
