--- a/hpt-frontend/package.json
+++ b/hpt-frontend/package.json
@@ -1,21 +1,26 @@
 {
   "name": "hpt-frontend",
-  "version": "0.0.1",
   "description": "HiPathTariffication frontend application",
   "repository": "https://github.com/DzenDyn/hpt-collector.git",
   "contributors": [
     "Evgeny Nikiforov <dzendyn@gmail.com> (https://github.com/DzenDyn/)",
     "Valery Grunenko <smb.sochi@gmail.com> (https://github.com/spectrejs/)"
   ],
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "~5.11.4",
-    "@testing-library/react": "~11.1.0",
-    "@testing-library/user-event": "~12.1.10",
-    "react": "~17.0.1",
-    "react-dom": "~17.0.1",
-    "react-scripts": "4.0.0",
-    "web-vitals": "~0.2.4"
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.1",
+    "typescript": "^4.0.3",
+    "web-vitals": "^0.2.4"
   },
   "devDependencies": {
     "eslint": "~7.12.1",
