--- a/hpt-frontend/tsconfig.json
+++ b/hpt-frontend/tsconfig.json
@@ -18,9 +18,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": false
   },
   "include": [
     "src"
-  ]
+  ],
+  "exclude": ["node_modules", ".vscode"]
 }
