--- a/hpt-frontend/.eslintrc.json
+++ b/hpt-frontend/.eslintrc.json
@@ -1,18 +1,33 @@
 {
     "env": {
         "browser": true,
-        "es6": true
+        "es6": true,
+        "es2017": true
     },
     "extends": [
         "airbnb-base",
         "prettier",
         "eslint:recommended",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:@typescript-eslint/recommended-requiring-type-checking"
     ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+		// Движку нужен проект TS для правил с типами
+		"project": "./hpt-frontend/tsconfig.json"
+    },
     "plugins": [
         "prettier",
-        "react"
+        "react",
+        "@typescript-eslint"
     ],
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
     "rules": {
         "no-console": 0,
         "prettier/prettier": ["error"],
@@ -24,6 +39,8 @@
         "no-param-reassign": ["error", { "props": false }],
         "no-case-declarations": 0,
         "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
-        "space-infix-ops": ["error", { "int32Hint": false }]
+        "space-infix-ops": ["error", { "int32Hint": false }],
+        "no-use-before-define": "off",
+        "@typescript-eslint/no-use-before-define": ["error"]
     }
 }
