--- a/hpt-frontend/package.json
+++ b/hpt-frontend/package.json
@@ -19,16 +19,18 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "~4.7.0",
+    "@typescript-eslint/parser": "~4.7.0",
     "eslint": "~7.12.1",
     "eslint-config-airbnb-base": "~14.2.0",
     "eslint-config-prettier": "~6.15.0",
     "eslint-plugin-import": "~2.22.1",
     "eslint-plugin-prettier": "~3.1.4",
-    "prettier": "~2.1.2"
+    "prettier": "~2.1.2",
+    "typescript": "4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
