--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-import": "~2.22.1",
     "eslint-plugin-prettier": "~3.1.4",
     "eslint-plugin-react": "^7.21.5",
-    "prettier": "~2.1.2"
+    "prettier": "~2.1.2",
+    "typescript": "4.1.3"
   }
 }
