--- a/hpt-frontend/tsconfig.json
+++ b/hpt-frontend/tsconfig.json
@@ -20,10 +20,11 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "noImplicitReturns": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": false,
     "outDir": "./bin",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "baseUrl": "."
   },
   "include": [
     "src"
