--- a/hpt-frontend/package.json
+++ b/hpt-frontend/package.json
@@ -1,37 +1,25 @@
 {
   "name": "hpt-frontend",
   "description": "HiPathTariffication frontend application",
-  "repository": "https://github.com/DzenDyn/hpt-collector.git",
   "contributors": [
     "Evgeny Nikiforov <dzendyn@gmail.com> (https://github.com/DzenDyn/)",
     "Valery Grunenko <smb.sochi@gmail.com> (https://github.com/spectrejs/)"
   ],
+  "repository": "https://github.com/DzenDyn/hpt.git",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
+    "antd": "^4.11.2",
+    "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "~4.7.0",
-    "@typescript-eslint/parser": "~4.7.0",
-    "eslint": "~7.12.1",
-    "eslint-config-airbnb-base": "~14.2.0",
-    "eslint-config-prettier": "~6.15.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-import": "~2.22.1",
-    "eslint-plugin-prettier": "~3.1.4",
-    "prettier": "~2.1.2",
-    "typescript": "4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -56,5 +44,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.18.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1"
   }
 }
