--- a/hpt-frontend/.eslintrc.json
+++ b/hpt-frontend/.eslintrc.json
@@ -2,12 +2,13 @@
     "env": {
         "browser": true,
         "es6": true,
-        "es2017": true
+        "es2021": true
     },
     "extends": [
         "airbnb-base",
         "prettier",
         "eslint:recommended",
+        "plugin:react/recommended",
         "prettier/react",
         "plugin:prettier/recommended"
     ],
