--- a/hpt-frontend/package.json
+++ b/hpt-frontend/package.json
@@ -9,6 +9,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.5.0-alpha.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
