--- a/package.json
+++ b/package.json
@@ -9,15 +9,5 @@
     "Valery Grunenko <smb.sochi@gmail.com> (https://github.com/spectrejs/)"
   ],
   "type": "module",
-  "license": "MIT",
-  "devDependencies": {
-    "eslint": "~7.12.1",
-    "eslint-config-airbnb-base": "~14.2.0",
-    "eslint-config-prettier": "~6.15.0",
-    "eslint-plugin-import": "~2.22.1",
-    "eslint-plugin-prettier": "~3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "prettier": "~2.1.2",
-    "typescript": "4.1.3"
-  }
+  "license": "MIT"
 }
