--- a/hpt-backend/package.json
+++ b/hpt-backend/package.json
@@ -11,8 +11,11 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "~4.17.9",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "~5.10.1",
     "@types/node": "~14.14.7",
+    "@types/passport": "^1.0.6",
+    "@types/passport-local": "^1.0.33",
     "@types/swagger-ui-express": "~4.1.2",
     "@types/uuid": "~8.3.0",
     "@types/validator": "~13.1.0",
@@ -22,7 +25,11 @@
     "dotenv": "~8.2.0",
     "express": "~4.17.1",
     "express-openapi-validator": "~4.7.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "~5.10.15",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "swagger-routes-express": "~3.2.1",
     "swagger-ui-express": "~4.1.4",
     "typescript": "~4.0.5",
