--- a/hpt-backend/tsconfig.json
+++ b/hpt-backend/tsconfig.json
@@ -21,6 +21,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "config/*.ts"],
   "exclude": ["node_modules", ".vscode"]
 }
