--- a/hpt-backend/package.json
+++ b/hpt-backend/package.json
@@ -10,52 +10,47 @@
   "main": "src/app.ts",
   "license": "MIT",
   "dependencies": {
-    "@types/express": "~4.17.9",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongoose": "~5.10.1",
-    "@types/node": "~14.14.7",
-    "@types/passport": "^1.0.6",
-    "@types/passport-local": "^1.0.33",
-    "@types/swagger-ui-express": "~4.1.2",
-    "@types/uuid": "~8.3.0",
-    "@types/validator": "~13.1.0",
-    "@types/yamljs": "~0.2.31",
-    "body-parser": "~1.19.0",
-    "connect": "~3.7.0",
-    "dotenv": "~8.2.0",
-    "express": "~4.17.1",
-    "express-openapi-validator": "~4.7.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "~5.10.15",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "swagger-routes-express": "~3.2.1",
-    "swagger-ui-express": "~4.1.4",
-    "typescript": "~4.0.5",
-    "uuid": "~8.3.1",
-    "validator": "~13.1.17",
-    "yamljs": "~0.3.0"
+    "@babel/node": "^7.13.13",
+    "body-parser": "^1.19.0",
+    "connect": "^3.7.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-openapi-validator": "^4.12.6",
+    "mongoose": "^5.12.2",
+    "morgan": "^1.10.0",
+    "swagger-routes-express": "^3.3.0",
+    "swagger-ui-express": "^4.1.6",
+    "uuid": "^8.3.2",
+    "validator": "^13.5.2",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "~4.7.0",
-    "@typescript-eslint/parser": "~4.7.0",
-    "eslint": "~7.12.1",
-    "eslint-config-airbnb-base": "~14.2.0",
-    "eslint-config-prettier": "~6.15.0",
-    "eslint-plugin-import": "~2.22.1",
-    "eslint-plugin-prettier": "~3.1.4",
-    "nodemon": "~2.0.6",
-    "npm-run-all": "~4.1.5",
-    "prettier": "~2.1.2",
-    "rimraf": "~3.0.2",
-    "ts-node": "~9.0.0"
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
+    "eslint": "^7.23.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "nodemon": "^2.0.7",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.2.1",
+    "rimraf": "^3.0.2"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
   },
   "scripts": {
+    "transpile": "babel ./src --out-dir bin --copy-files",
     "clean": "rimraf bin",
-    "tsc": "tsc",
-    "build": "npm-run-all clean tsc",
-    "start": "node ./bin/server.js",
-    "dev": "nodemon"
+    "build": "npm-run-all clean transpile",
+    "server": "node ./bin/app.js",
+    "dev": "npm-run-all build server",
+    "start": "yarn dev",
+    "watch": "nodemon"
   }
 }
